Add site-wide footer to all HTML pages
Introduces a consistent footer across all tool HTML files with copyright, contact, and donation information. Also adds styling for the new .site-footer class in the CSS.

--- a/json-tool.html
+++ b/json-tool.html
@@ -618,5 +618,8 @@
         updateStats();
         updateModeUI();
     </script>
+    <footer class="site-footer">
+        <p>&copy; Ian Rastall 2025<br>Contact: moving.form.of.dust@gmail.com<br>Donate: PayPal to merastall@gmail.com</p>
+    </footer>
 </body>
 </html>
