--- a/case-converter.html
+++ b/case-converter.html
@@ -307,5 +307,8 @@
         // Initialize stats
         updateStats();
     </script>
+    <footer class="site-footer">
+        <p>&copy; Ian Rastall 2025<br>Contact: moving.form.of.dust@gmail.com<br>Donate: PayPal to merastall@gmail.com</p>
+    </footer>
 </body>
 </html>
