--- a/css-unit-converter.html
+++ b/css-unit-converter.html
@@ -524,5 +524,8 @@
             calculate();
         })();
     </script>
+    <footer class="site-footer">
+        <p>&copy; Ian Rastall 2025<br>Contact: moving.form.of.dust@gmail.com<br>Donate: PayPal to merastall@gmail.com</p>
+    </footer>
 </body>
 </html>
