--- a/font-awesome-chooser.html
+++ b/font-awesome-chooser.html
@@ -679,6 +679,9 @@
         })();
     </script>
 
+    <footer class="site-footer">
+        <p>&copy; Ian Rastall 2025<br>Contact: moving.form.of.dust@gmail.com<br>Donate: PayPal to merastall@gmail.com</p>
+    </footer>
 </body>
 
 </html>
