--- a/font-chooser.html
+++ b/font-chooser.html
@@ -802,5 +802,8 @@
 
         resetAll();
     </script>
+    <footer class="site-footer">
+        <p>&copy; Ian Rastall 2025<br>Contact: moving.form.of.dust@gmail.com<br>Donate: PayPal to merastall@gmail.com</p>
+    </footer>
 </body>
 </html>
