--- a/hashing-tool.html
+++ b/hashing-tool.html
@@ -548,5 +548,8 @@
         // Initialize
         updateStats();
     </script>
+    <footer class="site-footer">
+        <p>&copy; Ian Rastall 2025<br>Contact: moving.form.of.dust@gmail.com<br>Donate: PayPal to merastall@gmail.com</p>
+    </footer>
 </body>
 </html>
