--- a/index.html
+++ b/index.html
@@ -351,5 +351,8 @@ document.documentElement.style.setProperty('--accent', savedColor);
 renderToolGrid();
 updateRecentTools();
     </script>
+    <footer class="site-footer">
+        <p>&copy; Ian Rastall 2025<br>Contact: moving.form.of.dust@gmail.com<br>Donate: PayPal to merastall@gmail.com</p>
+    </footer>
 </body>
 </html>
