--- a/tool-template.html
+++ b/tool-template.html
@@ -162,5 +162,8 @@
         // Tool-specific code goes below this line
         // -------------------------------------------
     </script>
+    <footer class="site-footer">
+        <p>&copy; Ian Rastall 2025<br>Contact: moving.form.of.dust@gmail.com<br>Donate: PayPal to merastall@gmail.com</p>
+    </footer>
 </body>
 </html>
