Add site-network link and header styles
Insert a centered site-network nav link (Text Utilities) in the header and add corresponding CSS. Header was made position: relative to allow the .site-network to be absolutely centered; styles added for link color, hover state, and sizing. Adjust footer/summary text alignment to right and include a responsive rule to reset .site-network to static positioning on smaller layouts.

--- a/case-converter.html
+++ b/case-converter.html
@@ -15,6 +15,9 @@
                     <span>Text Utilities</span>
                 </a>
             </div>
+            <nav class="site-network" aria-label="Network sites">
+                <a class="site-network-link" href="https://text-utils.net">Text Utilities</a>
+            </nav>
             <div class="controls">
                 <div class="accent-selector">
                     <span class="material-icons">palette</span>
