--- a/case-converter.html
+++ b/case-converter.html
@@ -16,7 +16,7 @@
                 </a>
             </div>
             <nav class="site-network" aria-label="Network sites">
-                <a class="site-network-link" href="https://text-utils.net">Text Utilities</a>
+                <a class="site-network-link" href="https://chessnerd.net">Chess Nerd</a>
             </nav>
             <div class="controls">
                 <div class="accent-selector">
