Add network link & refactor theme accent handling
Insert a site network link (Chess Nerd) into multiple tool pages and replace hard-coded accent <select> options with an empty select to be populated dynamically. Refactor js/theme.js to centralize the accent palette, populate the dropdown, apply and persist accent colors (applyAccent/populateAccentDropdown/adjustColor), and improve theme toggle handling. Update css/style.css to style the new .site-network link and adjust header responsiveness. Changes touch many tool HTML files (case-converter, color-chooser, css-unit-converter, date-time-info, find-replace, font-awesome-chooser, font-chooser, google-icons-chooser, hashing-tool, index, ip-info, json-tool, line-operations, random-numbers, sitemap-generator, text-info, tool-template), plus css/style.css and js/theme.js. Minor whitespace and holiday-snow logic cleanups included.

--- a/hashing-tool.html
+++ b/hashing-tool.html
@@ -15,21 +15,16 @@
                     <span>Text Utilities</span>
                 </a>
             </div>
+            <nav class="site-network" aria-label="Network sites">
+                <a href="https://chessnerd.net" class="site-network-link">
+                    <span class="material-icons" aria-hidden="true">sports_esports</span>
+                    Go to Chess Nerd
+                </a>
+            </nav>
             <div class="controls">
                 <div class="accent-selector">
                     <span class="material-icons">palette</span>
-                    <select id="accentColor" class="color-dropdown">
-                        <option value="#0d9488">Teal</option>
-                        <option value="#3b82f6">Blue</option>
-                        <option value="#8b5cf6">Purple</option>
-                        <option value="#10b981">Emerald</option>
-                        <option value="#f59e0b">Amber</option>
-                        <option value="#ef4444">Red</option>
-                        <option value="#ec4899">Soft Pink</option>
-                        <option value="#fb7185">Coral</option>
-                        <option value="#60a5fa">Cornflower</option>
-                        <option value="#7c3aed">Violet</option>
-                    </select>
+                    <select id="accentColor" class="color-dropdown"></select>
                 </div>
                 <button id="themeToggle" class="btn btn-secondary">
                     <span class="material-icons">dark_mode</span>
