--- a/tool-template.html
+++ b/tool-template.html
@@ -15,21 +15,16 @@
                     <span>Text Utilities</span>
                 </a>
             </div>
+            <nav class="site-network" aria-label="Network sites">
+                <a href="https://chessnerd.net" class="site-network-link">
+                    <span class="material-icons" aria-hidden="true">sports_esports</span>
+                    Go to Chess Nerd
+                </a>
+            </nav>
             <div class="controls">
                 <div class="accent-selector">
                     <span class="material-icons">palette</span>
-                    <select id="accentColor" class="color-dropdown">
-                        <option value="#0d9488">Teal</option>
-                        <option value="#3b82f6">Blue</option>
-                        <option value="#8b5cf6">Purple</option>
-                        <option value="#10b981">Emerald</option>
-                        <option value="#f59e0b">Amber</option>
-                        <option value="#ef4444">Red</option>
-                        <option value="#ec4899">Soft Pink</option>
-                        <option value="#fb7185">Coral</option>
-                        <option value="#60a5fa">Cornflower</option>
-                        <option value="#7c3aed">Violet</option>
-                    </select>
+                    <select id="accentColor" class="color-dropdown"></select>
                 </div>
                 <button id="themeToggle" class="btn btn-secondary">
                     <span class="material-icons">dark_mode</span>
