Add btn-compact and pill styles; update UIs
Introduce a compact button utility (.btn-compact), pill-style stat badges (.pill and .pill.muted) and a .visually-hidden utility in css/style.css. Update multiple tool pages to use the new btn-compact class for action buttons and convert stats spans to use the pill muted style for consistent, tighter UI elements. Affected files include css/style.css and various tool HTML files (case-converter, color-chooser, css-unit-converter, date-time-info, find-replace, font-awesome-chooser, font-chooser, google-icons-chooser, hashing-tool, ip-info, json-tool, line-operations, random-numbers, sitemap-generator, text-info, tool-template).

--- a/css-unit-converter.html
+++ b/css-unit-converter.html
@@ -142,7 +142,7 @@
                         <h2 id="toolName">CSS Unit Converter</h2>
                     </div>
                     <div class="tool-actions">
-                        <button id="backButton" class="btn btn-secondary">
+                        <button id="backButton" class="btn btn-secondary btn-compact">
                             <span class="material-icons">arrow_back</span>
                             Back
                         </button>
