--- a/font-awesome-chooser.html
+++ b/font-awesome-chooser.html
@@ -275,7 +275,7 @@
 
                     <div class="tool-actions">
 
-                        <button id="backButton" class="btn btn-secondary">
+                        <button id="backButton" class="btn btn-secondary btn-compact">
 
                             <span class="material-icons">arrow_back</span>
 
