--- a/hashing-tool.html
+++ b/hashing-tool.html
@@ -39,11 +39,11 @@
                         <h2>Hashing Tool</h2>
                     </div>
                     <div class="tool-actions">
-                        <button id="backButton" class="btn btn-secondary">
+                        <button id="backButton" class="btn btn-secondary btn-compact">
                             <span class="material-icons">arrow_back</span>
                             Back
                         </button>
-                        <button id="copyOutput" class="btn btn-secondary">
+                        <button id="copyOutput" class="btn btn-secondary btn-compact">
                             <span class="material-icons">content_copy</span>
                             Copy
                         </button>
@@ -99,14 +99,14 @@
                     <div class="io-panel">
                         <div class="io-label">
                             <span>Input</span>
-                            <span class="stats" id="inputStats">0 chars</span>
+                            <span class="stats pill muted" id="inputStats">0 chars</span>
                         </div>
                         <textarea id="textInput" placeholder="Enter text here..."></textarea>
                     </div>
                     <div class="io-panel">
                         <div class="io-label">
                             <span>Output</span>
-                            <span class="stats" id="outputStats">0 chars</span>
+                            <span class="stats pill muted" id="outputStats">0 chars</span>
                         </div>
                         <textarea id="textOutput" class="output" readonly placeholder="Results will appear here..."></textarea>
                     </div>
