--- a/line-operations.html
+++ b/line-operations.html
@@ -197,7 +197,7 @@
                         <h2>Line Operations</h2>
                     </div>
                     <div class="tool-actions">
-                        <button id="backButton" class="btn btn-secondary">
+                        <button id="backButton" class="btn btn-secondary btn-compact">
                             <span class="material-icons">arrow_back</span>
                             Back
                         </button>
@@ -387,7 +387,7 @@
                     <div class="io-panel">
                         <div class="io-label">
                             <span>Text Lines</span>
-                            <span class="stats" id="inputStats">0 chars, 0 lines</span>
+                            <span class="stats pill muted" id="inputStats">0 chars, 0 lines</span>
                         </div>
                         <textarea id="inputText" style="min-height: 400px;" placeholder="Enter or paste text here, one item per line..."></textarea>
                     </div>
