--- a/text-info.html
+++ b/text-info.html
@@ -78,7 +78,7 @@
                         <h2 id="toolName">Text Info</h2>
                     </div>
                     <div class="tool-actions">
-                        <button id="backButton" class="btn btn-secondary">
+                        <button id="backButton" class="btn btn-secondary btn-compact">
                             <span class="material-icons">arrow_back</span>
                             Back
                         </button>
@@ -86,11 +86,11 @@
                             <span class="material-icons">content_paste</span>
                             Paste
                         </button>
-                        <button id="clearAll" class="btn btn-secondary">
+                        <button id="clearAll" class="btn btn-secondary btn-compact">
                             <span class="material-icons">delete</span>
                             Clear
                         </button>
-                        <button id="copyOutput" class="btn btn-secondary">
+                        <button id="copyOutput" class="btn btn-secondary btn-compact">
                             <span class="material-icons">content_copy</span>
                             Copy
                         </button>
@@ -102,7 +102,7 @@
                     <div class="io-panel">
                         <div class="io-label">
                             <span>Your Text</span>
-                            <span class="stats" id="inputStats">0 chars</span>
+                            <span class="stats pill muted" id="inputStats">0 chars</span>
                         </div>
                         <textarea id="inputText" placeholder="Paste or type your text here..." style="min-height: 200px;"></textarea>
                     </div>
