--- a/tool-template.html
+++ b/tool-template.html
@@ -40,15 +40,15 @@
                         <h2 id="toolName">Tool Name</h2>
                     </div>
                     <div class="tool-actions">
-                        <button id="backButton" class="btn btn-secondary">
+                        <button id="backButton" class="btn btn-secondary btn-compact">
                             <span class="material-icons">arrow_back</span>
                             Back
                         </button>
-                        <button id="clearAll" class="btn btn-secondary">
+                        <button id="clearAll" class="btn btn-secondary btn-compact">
                             <span class="material-icons">delete</span>
                             Clear
                         </button>
-                        <button id="copyOutput" class="btn btn-secondary">
+                        <button id="copyOutput" class="btn btn-secondary btn-compact">
                             <span class="material-icons">content_copy</span>
                             Copy
                         </button>
@@ -65,14 +65,14 @@
                     <div class="io-panel">
                         <div class="io-label">
                             <span>Input</span>
-                            <span class="stats" id="inputStats">0 chars</span>
+                            <span class="stats pill muted" id="inputStats">0 chars</span>
                         </div>
                         <textarea id="inputText" placeholder="Paste your text here..."></textarea>
                     </div>
                     <div class="io-panel">
                         <div class="io-label">
                             <span>Output</span>
-                            <span class="stats" id="outputStats">0 chars</span>
+                            <span class="stats pill muted" id="outputStats">0 chars</span>
                         </div>
                         <textarea id="outputText" class="output" readonly placeholder="Results will appear here..."></textarea>
                     </div>
