--- a/font-chooser.html
+++ b/font-chooser.html
@@ -215,7 +215,7 @@
                         <h2>Font Chooser</h2>
                     </div>
                     <div class="tool-actions">
-                        <button id="backButton" class="btn btn-secondary">
+                        <button id="backButton" class="btn btn-secondary btn-compact">
                             <span class="material-icons">arrow_back</span>
                             Back
                         </button>
