--- a/random-numbers.html
+++ b/random-numbers.html
@@ -104,7 +104,7 @@
                         <h2>Random Number Generator</h2>
                     </div>
                     <div class="tool-actions">
-                        <button id="backButton" class="btn btn-secondary">
+                        <button id="backButton" class="btn btn-secondary btn-compact">
                             <span class="material-icons">arrow_back</span>
                             Back
                         </button>
