Add network icons and external link UI
Replace plain network text links with branded icon links that open in a new tab and show an "open_in_new" indicator. Updated multiple tool pages to include Chess Nerd and GitHub site-network links (with target="_blank" and rel="noopener noreferrer"), added img/chessnerd-icon.png and img/github.png, and adjusted markup to include icon <img> and label spans. CSS updated to support the new layout and sizing (.site-network-icon, material-icons font-size, header/site-network layout and spacing) and small layout tweaks for controls alignment.

--- a/google-icons-chooser.html
+++ b/google-icons-chooser.html
@@ -130,8 +130,15 @@
                 </a>
             </div>
             <nav class="site-network" aria-label="Network sites">
-                <a href="https://chessnerd.net" class="site-network-link">
-                    Go to Chess Nerd
+                <a href="https://chessnerd.net" class="site-network-link" target="_blank" rel="noopener noreferrer">
+                    <img src="img/chessnerd-icon.png" class="site-network-icon" alt="">
+                    <span>Chess Nerd</span>
+                    <span class="material-icons" aria-hidden="true">open_in_new</span>
+                </a>
+                <a href="https://github.com/ianrastall/text-utils" class="site-network-link" target="_blank" rel="noopener noreferrer">
+                    <img src="img/github.png" class="site-network-icon" alt="">
+                    <span>GitHub</span>
+                    <span class="material-icons" aria-hidden="true">open_in_new</span>
                 </a>
             </nav>
             <div class="controls">
