--- a/font-awesome-chooser.html
+++ b/font-awesome-chooser.html
@@ -3,6 +3,15 @@
 <html lang="en">
 
 <head>
+<!-- Google tag gtag.js -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0V2F0V7FWB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag{dataLayer.pusharguments;}
+  gtag'js', new Date;
+
+  gtag'config', 'G-0V2F0V7FWB';
+</script>
 
     <meta charset="UTF-8">
 
