--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag gtag.js -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0V2F0V7FWB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag{dataLayer.pusharguments;}
+  gtag'js', new Date;
+
+  gtag'config', 'G-0V2F0V7FWB';
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Utilities</title>
