--- a/font-awesome-chooser.html
+++ b/font-awesome-chooser.html
@@ -7,10 +7,10 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0V2F0V7FWB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag{dataLayer.pusharguments;}
-  gtag'js', new Date;
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  gtag'config', 'G-0V2F0V7FWB';
+  gtag('config', 'G-0V2F0V7FWB');
 </script>
 
     <meta charset="UTF-8">
@@ -599,6 +599,8 @@
                     return;
                 }
 
+                const fragment = document.createDocumentFragment();
+
                 currentIcons.forEach(icon => {
                     const button = document.createElement('button');
                     button.type = 'button';
@@ -606,8 +608,10 @@
                     button.setAttribute('aria-label', icon.name);
                     button.innerHTML = `<i class="fa fa-${icon.name}" aria-hidden="true"></i>`;
                     button.addEventListener('click', () => selectIcon(icon, button));
-                    iconsGrid.appendChild(button);
+                    fragment.appendChild(button);
                 });
+
+                iconsGrid.appendChild(fragment);
             };
 
             const buildSnippet = (icon) => {
