--- a/google-icons-chooser.html
+++ b/google-icons-chooser.html
@@ -5,10 +5,10 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0V2F0V7FWB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag{dataLayer.pusharguments;}
-  gtag'js', new Date;
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  gtag'config', 'G-0V2F0V7FWB';
+  gtag('config', 'G-0V2F0V7FWB');
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -399,6 +399,8 @@
                     return;
                 }
 
+                const fragment = document.createDocumentFragment();
+
                 currentIcons.forEach(icon => {
                     const button = document.createElement('button');
                     button.type = 'button';
@@ -407,8 +409,10 @@
                     button.title = icon.name;
                     button.innerHTML = `<span class="material-icons" aria-hidden="true">${icon.name}</span>`;
                     button.addEventListener('click', () => selectIcon(icon, button));
-                    iconsGrid.appendChild(button);
+                    fragment.appendChild(button);
                 });
+
+                iconsGrid.appendChild(fragment);
             };
 
             const buildSnippet = (icon) => {
