Fix title-case, color chooser, and sitemap aborts
Case-converter: Make toTitleCase handle multiline input and correctly capitalize the first word of each line while preserving small words. Color-chooser: Clear search results when updates come from other sources and hide the eyedropper UI if the browser doesn't support Window.EyeDropper. Sitemap-generator: Improve abort/error handling — notify and stop the crawl instead of throwing on abort, handle AbortError from fetch and response.text, and avoid final abort throw; this prevents uncaught exceptions and provides clearer user feedback.

--- a/color-chooser.html
+++ b/color-chooser.html
@@ -505,6 +505,9 @@
                         dom.colorName.value = currentColor;
                     }
                 }
+                if (source !== 'search' && source !== 'closest') {
+                    dom.searchResult.innerHTML = '';
+                }
                 generateSnippet();
                 updatePngPreview();
                 setStatus('Color updated.', 'success');
@@ -650,6 +653,9 @@
 
             const init = () => {
                 cacheDom();
+                if (!window.EyeDropper && dom.eyedropper) {
+                    dom.eyedropper.style.display = 'none';
+                }
                 populateCategories();
                 populateLanguages();
                 dom.colorCategory.value = 'All Colors';
