--- a/case-converter.html
+++ b/case-converter.html
@@ -268,16 +268,20 @@
 
         function toTitleCase(text) {
             const smallWords = /^(a|an|the|and|but|or|for|nor|on|at|to|from|by|in|of)$/i;
-            let firstWordSeen = false;
-            return text
-                .toLowerCase()
-                .replace(/\b\w+\b/g, word => {
-                    if (firstWordSeen && smallWords.test(word)) {
+            
+            return text.split('\n').map(line => {
+                let firstWordSeen = false;
+                return line.toLowerCase().replace(/\b\w+\b/g, word => {
+                    if (!firstWordSeen) {
+                        firstWordSeen = true;
+                        return word.charAt(0).toUpperCase() + word.slice(1);
+                    }
+                    if (smallWords.test(word)) {
                         return word;
                     }
-                    firstWordSeen = true;
                     return word.charAt(0).toUpperCase() + word.slice(1);
                 });
+            }).join('\n');
         }
 
         function toSentenceCase(text) {
