Support apostrophes in titlecase; simplify sitemap
case-converter.html: Extend the word regex to include optional apostrophe sequences (e.g. don't, it's) so contractions are treated as single words when capitalizing the first word of each line.

sitemap-generator.html: Remove the manual deduplication filter and return a sorted entries list directly (deduplication is no longer performed here).

--- a/case-converter.html
+++ b/case-converter.html
@@ -271,7 +271,7 @@
             
             return text.split('\n').map(line => {
                 let firstWordSeen = false;
-                return line.toLowerCase().replace(/\b\w+\b/g, word => {
+                return line.toLowerCase().replace(/\b\w+(?:'\w+)?/g, word => {
                     if (!firstWordSeen) {
                         firstWordSeen = true;
                         return word.charAt(0).toUpperCase() + word.slice(1);
